--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   background-color: var(--prussian-blue); 
   color: var(--white); 
-  margin: 0; 
+  margin: 0;
+  padding: 0; 
+  /* box-sizing: border-box; */
   font-family: Arial, sans-serif;
 }
 
