--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   color: var(--white); 
   margin: 0;
   padding: 0; 
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
 
